# project_structure

./: .coverage  .gitignore  CONCLUSION.md  LICENSE  METRICS.md  README.md  USAGE.md  VERIFICATION.md  pyproject.toml
docs/: README.en.md  README.en.tech.md  README.zh-CN.md  README.zh-CN.tech.md  README.zh-TW.md  README.zh-TW.tech.md  USAGE.en.md  USAGE.zh-CN.md
examples/: c_project_structure_example.md  cpp_project_structure_example.md  javascript_project_structure_example.md  python_project_structure_example.md  rust_project_structure_example.md
src/: generate_conclusion.py  generate_metrics.py  generate_verification.py  i18n.py  main.py  project_generator.py  structure_parser.py  verification_metrics.py
tests/: README.md  conftest.py  test_generate_conclusion.py  test_generate_conclusion_extended.py  test_generate_conclusion_final.py  test_generate_metrics.py  test_generate_metrics_comprehensive.py  test_generate_metrics_extended.py  test_generate_metrics_final.py  test_generate_verification_extended.py  test_generate_verification_final.py  test_i18n.py  test_main.py  test_main_comprehensive.py  test_main_extended.py  test_project_generator.py  test_project_generator_extended.py  test_project_generator_final.py  test_structure_parser.py  test_structure_parser_comprehensive.py  test_structure_parser_edge_cases.py  test_structure_parser_extended.py  test_structure_parser_final.py  test_structure_parser_remaining.py  test_verification_metrics.py  test_verification_metrics_complex.py  test_verification_metrics_comprehensive.py  test_verification_metrics_exception.py  (+2 more)
